--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Random Card Generator</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -12,17 +12,20 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
+  <body class="bg-success">
+    <div class="container">
+      <div class="text-center w-100 h-100 d-flex justify-content-center mt-5">
+        <div class="card d-flex justify-content-center">
+          <div class="card-body row h-100 fs-1 fw-bold">
+            <div class="col-12 h-25 text-start suit"></div>
+            <div class="col-12 h-50 center number"></div>
+            <div class="col-12 h-25 bottom text-end suit"></div>
+          </div>
+        </div>
+      </div>
+      <div class="fixed-bottom p-4 text-center">
         Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        <a class="text-white" href="#">Alejandro Gonzalez</a>
       </div>
     </div>
   </body>
